# tu-rabbit

./: .env  .gitignore  Cargo.toml  README.md
configuration/authentication/: base.yaml  local.yaml  production.yaml
configuration/files/: base.yaml  production.yaml
configuration/mail/: base.yaml  production.yaml
configuration/openapi/: base.yaml
crates/authentication/: Cargo.toml  sqlx-data.json
crates/authentication/src/: lib.rs
crates/authentication/src/api/: application.rs  application_api.rs  change_password.rs  check_username.rs  configuration.rs  current_user.rs  generate_verification_code_and_send.rs  guest_credentials.rs  health_check.rs  middleware.rs  mod.rs  out_login.rs  permission.rs  register_user.rs  reset_password.rs  role.rs  user.rs  validate_credentials.rs
crates/authentication/src/connectors/: mod.rs  permission_middleware.rs
crates/authentication/src/connectors/inner/: connector.rs  connector_builder.rs  connector_middleware.rs  connector_server.rs  mod.rs
crates/authentication/src/connectors/web/: connector.rs  connector_builder.rs  connector_middleware.rs  connector_server.rs
crates/authentication/src/domain/: mod.rs
crates/authentication/src/domain/application/: dao.rs  entity.rs  mod.rs  service.rs
crates/authentication/src/domain/cache/: entity.rs  mod.rs
crates/authentication/src/domain/credentials/: dao.rs  entity.rs  mod.rs  service.rs
crates/authentication/src/domain/namespace/: entity.rs  mod.rs
crates/authentication/src/domain/permission/: dao.rs  entity.rs  mod.rs  service.rs
crates/authentication/src/domain/role/: dao.rs  entity.rs  mod.rs  service.rs
crates/authentication/src/domain/user/: dao.rs  entity.rs  mod.rs  service.rs
crates/authentication/src/handler/: cookie.rs  jwt.rs  mod.rs
crates/authentication/src/test_helpers/: mod.rs
crates/authentication/tests/api/: application.rs  check_username.rs  current_user.rs  generate_verification_code_and_send.rs  health_check.rs  main.rs  out_login.rs  permission.rs  role.rs  user.rs  validate_credentials.rs
crates/authentication/tests/connector/: main.rs
crates/authentication/tests/connector/inner/: current_user.rs  health_check.rs  mod.rs  service_with_permission_routes.rs
crates/authentication/tests/connector/web/: current_user.rs  health_check.rs  mod.rs
crates/configuration/: Cargo.toml
crates/configuration/configuration/test/: base.yaml
crates/configuration/src/: lib.rs
crates/connector/: Cargo.toml
crates/connector/src/: connector_tratit.rs  lib.rs
crates/data_transmission/: Cargo.toml
crates/data_transmission/src/: data.rs  lib.rs  web.rs
crates/data_transmission/src/error/: mod.rs  openapi.rs
crates/data_transmission/src/error/authentication/: change_password_error.rs  generate_verification_code_and_send_error.rs  mod.rs  namespace_error.rs  register_user_error.rs  validate_error.rs
crates/files/: Cargo.toml
crates/files/src/: lib.rs
crates/files/src/api/: application.rs  configuration.rs  files.rs  mod.rs
crates/files/src/connectors/: mod.rs
crates/files/src/connectors/inner/: connector.rs  connector_builder.rs  connector_middleware.rs  connector_server.rs
crates/files/src/connectors/web/: connector.rs  connector_builder.rs  connector_server.rs
crates/files/src/test/: helpers.rs
crates/files/tests/api/: health_check.rs
crates/files/tests/connector/inner/: health_check.rs
crates/files/tests/connector/web/: health_check.rs
crates/mail/: Cargo.toml
crates/mail/src/: lib.rs
crates/mail/src/api/: application.rs  configuration.rs
crates/mail/src/connectors/: mod.rs
crates/mail/src/connectors/inner/: connector.rs  connector_builder.rs  connector_server.rs  mod.rs
crates/mail/src/connectors/web/: connector.rs  connector_builder.rs  connector_server.rs  mod.rs
crates/mail/src/domain/: mail_builder.rs  mod.rs
crates/mail/src/test/: helpers.rs  mod.rs
crates/mail/tests/api/: health_check.rs  main.rs
crates/mail/tests/connector/inner/: health_check.rs
crates/mail/tests/connector/web/: health_check.rs
crates/openapi/: Cargo.toml
crates/openapi/src/: lib.rs
crates/openapi/src/api/: api_docs.rs  application.rs  configuration.rs  mod.rs
crates/openapi/src/handler/: mod.rs  openapi.rs
crates/openapi/tests/api/: api_docs.rs  health_check.rs  helpers.rs  main.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/template/: Cargo.toml
crates/template/src/: lib.rs
crates/template/src/api/: application.rs  configuration.rs  mod.rs
crates/template/src/connectors/: mod.rs
crates/template/src/connectors/inner/: connector.rs  connector_builder.rs  connector_server.rs
crates/template/src/connectors/web/: connector.rs  connector_builder.rs  connector_middleware.rs  connector_server.rs
crates/template/src/test/: helpers.rs
crates/template/tests/api/: health_check.rs
crates/template/tests/connector/inner/: health_check.rs
crates/template/tests/connector/web/: health_check.rs
crates/typed_redis/: Cargo.toml
crates/typed_redis/src/: lib.rs
crates/typed_session/: Cargo.toml
crates/typed_session/src/: lib.rs  typed_session.rs
crates/typed_session/src/data/: mod.rs
crates/typed_session/src/data/verification_code/: entity.rs  mod.rs  service.rs
crates/worker/src/: lib.rs
migrations/: 20220421082235_seed_user.sql  20220510003757_add_user_type_to_users.sql  20220510005723_add_status_to_users.sql  20220510010029_make_status_not_null_in_users.sql  20220512004004_make_status_default_1_in_users.sql  20220512004414_add_name_to_users.sql  20220516015710_add_create_at_and_update_at_to_users.sql  20220516074745_create_roles_table.sql  20220516075457_create_permission_table.sql  20220518021523_seed_role.sql  20220518032717_seed_permission.sql  20220527014526_create_application_table.sql  20220527025014_seed_application.sql
scripts/: init_db.sh  init_redis.sh
