[package]
name = "tu-rabbit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/authentication.rs"
name = "authentication"

[[bin]]
path = "src/bin/openapi.rs"
name = "openapi"

[dependencies]
# 
telemetry = { path = "crates/telemetry", version = "0.1" }
connector = { path = "crates/connector", version = "0.1" }
typed-session = { path = "crates/typed_session", version = "0.1" }
typed-redis = { path = "crates/typed_redis", version = "0.1" }
authentication = { path = "crates/authentication", version = "0.1" }
openapi = { path = "crates/openapi", version = "0.1" }
mail = { path = "crates/mail", version = "0.1" }
files = { path = "crates/files", version = "0.1" }

# other
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
secrecy = { version = "0.8", features = ["serde"] }
actix-web = "4"
actix-web-lab = "0.15"
tracing-actix-web = "0.5"
actix-files = "0.6.0"
