[package]
name = "configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.0"

[dev-dependencies]
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
uuid = { version = "0.8.1", features = ["v4", "serde"] }