[package]
name = "data-transmission"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 
telemetry = { path = "../telemetry", version = "0.1" }
typed-session = { path = "../typed_session", version = "0.1" }

# other
actix-web = "4"
serde = { version = "1", features = ["derive"]}
anyhow = "1"
thiserror = "1"
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
chrono = "0.4"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "uuid",
    "chrono"
]