[package]
name = "mail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
telemetry = { path = "../telemetry", version = "0.1" }
configuration = { path = "../configuration", version = "0.1" }
data-transmission = { path = "../data_transmission", version = "0.1" }
connector = { path = "../connector", version = "0.1" }

# other
lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2"
actix-web = "4"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.5"
actix-web-lab = "0.15"
serde_json = "1"
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
secrecy = { version = "0.8", features = ["serde"] }
config = "0.13.0"
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]