[package]
name = "openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
telemetry = { path = "../telemetry", version = "0.1" }
configuration = { path = "../configuration", version = "0.1" }
data-transmission = { path = "../data_transmission", version = "0.1" }

# other
actix-web = "4"
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
secrecy = { version = "0.8", features = ["serde"] }
config = "0.13.0"
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
tracing-actix-web = "0.5"
tracing = { version = "0.1", features = ["log"] }
anyhow = "1"
openapiv3 = "1"
serde_json = "1"

[dev-dependencies]
once_cell = "1"
claim = "0.5"
# We are not using fake >= 2.4 because it relies on rand 0.8
# which has been recently released and it is not yet used by
# quickcheck (solved in its upcoming 1.0 release!)
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
openapiv3 = "1"

[dev-dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]