[package]
name = "typed-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-redis = { version = "0.10.2", features = ["serde"] }
redis = { version = "0.21.5", features = ["tls"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"