[package]
name = "typed-session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
actix-web = "4"
anyhow = "1"

[dependencies.actix-session]
# We are using an unreleased version of `actix-session` that provides a more
# composable API for session storage backends + TLS/auth support
# when using the Redis backend
# git = "https://github.com/actix/actix-extras"
# branch = "master"
version = "0.6.2"
features = ["redis-rs-session", "redis-rs-tls-session"]
